# boost-python-bindings

./: .env  .gitignore  CMakeLists.txt  FindLibClang.cmake  calculator.cpp  calculator.hpp  calculator_bindings.cpp  dev.Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: build-and-test.yml
generator/: CMakeLists.txt  ast.hpp  bindings_discovery.cpp  bindings_discovery.hpp  boost_python_bindings.cpp  boost_python_bindings.hpp  clang_parser.cpp  clang_parser.hpp  lazy.hpp  main.cpp  module_entrypoint.cpp.in  visitors.hpp
test/: CMakeLists.txt
test/e2e/: CMakeLists.txt
test/e2e/include/: constructors.hpp  nominal.hpp
test/e2e/python_unit_tests/: test_classes.py  test_constructors.py  test_nominal.py  test_nominal_classes.py  test_nominal_functions.py  test_nominal_structs.py  test_structs.py
test/e2e/src/: constructors.cpp  nominal.cpp
